--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "vscode": "^1.105.0"
   },
   "categories": [
-    "Other"
+    "Programming Languages",
+    "Snippets"
   ],
   "activationEvents": [],
   "main": "./out/extension.js",
