--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
     "lint": "eslint src",
-    "test": "vscode-test",
-    "copy-res": "node -e \"require('fs').cpSync('res', 'out/res', {recursive: true});\""
+    "test": "vscode-test"
   },
   "devDependencies": {
     "@types/vscode": "^1.105.0",
